# connectome-harmonics

./: .cursorrules  .gitignore  DATA_ORGANIZATION.md  README.md  pyproject.toml
.cursor/: linter_rules.md
.cursor/templates/: data_function.py
configs/: config.yaml  harmonics.yaml  hydra.yaml  viz.yaml
configs/analysis/: checkerboard.yaml  heatmaps.yaml
configs/dataset/: camcan.yaml  hcpa.yaml
data/backups/: metadata_backup_20250904_152039.csv  metadata_backup_20250905_142429.parquet
data/metadata/: subject_metadata.parquet
examples/: data_loading_patterns.py
experiments/: 01_compute_harmonics.ipynb
experiments/notebooks/: 00_compute_harmonics.ipynb  00_data_handling.ipynb
scripts/: build_gallery.py  convert_zarr_to_parquet.py  extract_harmonics.py  launch_explorer.py  organize_data.py  process_raw_data.py  run_experiment.py  sweep.py
src/ch/: __init__.py  io.py  settings.py
src/ch/analysis/: distance_metrics.py  stats.py
src/ch/analysis/inter_harmonic/: inter_harmonics_aggregate.py  inter_harmonics_build.py  inter_harmonics_selectors.py
src/ch/compute_harmonics/: harmonics.py
src/ch/data_handling/: convenience.py  data_utils.py  io.py  metadata.py
src/ch/viz/: heatmaps.py  viz.py
src/chm/: harmonics.py  inter_harmonic.py  measures.py  utils.py  viz.py
tests/: test_harmonics.py  test_inter_harmonic.py  test_viz.py
