[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "connectome-harmonics"
version = "0.1.0"
description = "Research code for computing and analyzing connectome harmonics, measures, and visualizations."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name" }
]
license = { text = "Proprietary" }
keywords = ["connectome", "harmonics", "neuroscience", "graph", "spectral"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  # Core numerics & data handling
  "numpy>=1.23",
  "scipy>=1.9",
  "pandas>=1.5",
  "xarray>=2023.1",
  "pyarrow>=10.0",  # Required for parquet support
  # Graph / network utils (for connectome structures)
  "networkx>=2.8",
  # Configs
  "PyYAML>=6.0",
  # Settings
  "pydantic>=1.10,<2",
  # Stats / ML helpers for analyses
  "scikit-learn>=1.2",
  "statsmodels>=0.13",
  # Visualization
  "matplotlib>=3.6",
  "seaborn>=0.12",
  # Quality-of-life
  "tqdm>=4.64",
]

[project.optional-dependencies]
io = [
  # Common neuroimaging / file formats (optional)
  "nibabel>=5.0",
  "h5py>=3.7",
  "zarr>=2.15",
]
notebooks = [
  "jupyter>=1.0",
  "ipykernel>=6.20",
]
dev = [
  "pytest>=7.2",
  "black>=23.0",
  "ruff>=0.4",
  "mypy>=1.3",
  "pre-commit>=3.3",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["chm*"]
exclude = []
namespaces = false
